// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker UI Component should match snapshot 1`] = `
<div>
  <span>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth"
      data-testid="dp-test"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
        for="input-datepicker"
      >
        Date Picker
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        label="Date Picker"
      >
        <input
          aria-describedby="helptext-datepicker"
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
          disabled="disabled"
          id="input-datepicker"
          name="datepicker"
          type="text"
          value="13 Aug 2019"
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
        >
          <button
            aria-describedby="helptext-datepicker"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style="width: 1.125rem; height: 1.125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 1.33333V0H18.4V1.33333H5.6V0H4V1.33333H0V24H18.9333L24 18.9333V1.33333H20ZM18.9333 21.7373V18.9333H21.7373L18.9333 21.7373ZM22.4 17.3333H17.3333V22.4H1.6V8H22.4V17.3333ZM22.4 6.4H1.6V2.93333H4V4.66667H5.6V2.93333H18.4V4.66667H20V2.93333H22.4V6.4ZM11.7333 13.372V20H13.3333V10.628L9.33733 12.8893L10.1253 14.2827L11.7333 13.372Z"
                  fill="#333333"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-87 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-88"
            style="width: 0px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <div
        aria-live="polite"
      >
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
          id="helptext-datepicker"
        >
          Must be less than 90 days ago
        </p>
      </div>
    </div>
  </span>
</div>
`;

exports[`DatePicker UI Component should match snapshot for error 1`] = `
<div>
  <span>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth"
      data-testid="dp-test"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
        data-shrink="true"
        for="input-datepicker"
      >
        Date Picker
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        label="Date Picker"
      >
        <input
          aria-describedby="helptext-datepicker"
          aria-invalid="true"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
          disabled="disabled"
          id="input-datepicker"
          name="datepicker"
          type="text"
          value="13 Aug 2019"
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
        >
          <button
            aria-describedby="helptext-datepicker"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style="width: 1.125rem; height: 1.125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 1.33333V0H18.4V1.33333H5.6V0H4V1.33333H0V24H18.9333L24 18.9333V1.33333H20ZM18.9333 21.7373V18.9333H21.7373L18.9333 21.7373ZM22.4 17.3333H17.3333V22.4H1.6V8H22.4V17.3333ZM22.4 6.4H1.6V2.93333H4V4.66667H5.6V2.93333H18.4V4.66667H20V2.93333H22.4V6.4ZM11.7333 13.372V20H13.3333V10.628L9.33733 12.8893L10.1253 14.2827L11.7333 13.372Z"
                  fill="#333333"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-213"
            style="width: 0px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <div
        aria-live="polite"
      >
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
          id="helptext-datepicker"
        >
          Must be less than 90 days ago
        </p>
      </div>
    </div>
  </span>
</div>
`;

exports[`DatePicker UI Component should match snapshot for null value 1`] = `
<div>
  <span>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth"
      data-testid="dp-test"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
        data-shrink="false"
        for="input-datepicker"
      >
        Date Picker
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        label="Date Picker"
      >
        <input
          aria-describedby="helptext-datepicker"
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
          disabled="disabled"
          id="input-datepicker"
          name="datepicker"
          type="text"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
        >
          <button
            aria-describedby="helptext-datepicker"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style="width: 1.125rem; height: 1.125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 1.33333V0H18.4V1.33333H5.6V0H4V1.33333H0V24H18.9333L24 18.9333V1.33333H20ZM18.9333 21.7373V18.9333H21.7373L18.9333 21.7373ZM22.4 17.3333H17.3333V22.4H1.6V8H22.4V17.3333ZM22.4 6.4H1.6V2.93333H4V4.66667H5.6V2.93333H18.4V4.66667H20V2.93333H22.4V6.4ZM11.7333 13.372V20H13.3333V10.628L9.33733 12.8893L10.1253 14.2827L11.7333 13.372Z"
                  fill="#333333"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-337 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-338"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <div
        aria-live="polite"
      >
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
          id="helptext-datepicker"
        >
          Must be less than 90 days ago
        </p>
      </div>
    </div>
  </span>
</div>
`;
